Bug 368483 - Segfault when creating a new document
Summary: Segfault when creating a new document
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-09 08:47 UTC by Nicholas LaPointe
Modified: 2016-09-09 09:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicholas LaPointe 2016-09-09 08:47:53 UTC
When attempting to create a new document, Krita receives a segmentation fault before it can display the dialog for creating a new document.
This happens since commit 93ef7c8ef97e3ba5a1349ba38408269205a9d2b8 ("Merge in new internal color picker dialog!").

Reproducible: Always

Steps to Reproduce:
1. Attempt to create a new document



gdb output and backtrace:
Thread 1 "krita" received signal SIGSEGV, Segmentation fault.
0x00007ffff1cdc5f9 in KoColor::colorSpace (this=0xcc5178c) at src/krita-mod/libs/pigment/KoColor.cpp:252
252         return d->colorSpace;

#0  0x00007ffff1cdc5f9 in KoColor::colorSpace (this=0xcc5178c) at src/libs/pigment/KoColor.cpp:252
#1  0x00007ffff1cdb81a in KoColor::operator= (this=0xcc51578, rhs=...) at src/libs/pigment/KoColor.cpp:126
#2  0x00007ffff76c4061 in KisColorButton::setColor (this=0xcc512e0, c=...) at src/libs/ui/widgets/kis_color_button.cpp:154
#3  0x00007ffff76c5633 in KisColorButton::qt_static_metacall (_o=0xcc512e0, _c=QMetaObject::WriteProperty, _id=0, _a=0x7fffffffca00) at build/libs/ui/moc_kis_color_button.cpp:146
#4  0x00007ffff76c580c in KisColorButton::qt_metacall (this=0xcc512e0, _c=QMetaObject::WriteProperty, _id=0, _a=0x7fffffffca00) at build/libs/ui/moc_kis_color_button.cpp:192
#5  0x00007ffff5d44cd4 in QMetaProperty::write(QObject*, QVariant const&) const () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007ffff5d6d5cf in QObject::setProperty(char const*, QVariant const&) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007ffff765ddf8 in Ui_WdgNewImage::setupUi (this=0xc558510, WdgNewImage=0xc5584e0) at build/libs/ui/ui_wdgnewimage.h:410
#8  0x00007ffff7660126 in WdgNewImage::WdgNewImage (this=0xc5584e0, parent=0xc563750) at src/libs/ui/widgets/kis_custom_image_widget.h:42
#9  0x00007ffff7653afc in KisCustomImageWidget::KisCustomImageWidget (this=0xc5584e0, parent=0xc563750, defWidth=1024, defHeight=1024, resolution=1.3888888888888888, defColorModel=..., defColorDepth=..., defColorProfile=..., 
    imageName=...) at src/libs/ui/widgets/kis_custom_image_widget.cc:66
#10 0x00007ffff77a5cd5 in KisMainWindow::slotFileNew (this=0xb32c5b0) at src/libs/ui/KisMainWindow.cpp:1393
Comment 1 Lee Zhen Yong 2016-09-09 09:22:14 UTC
I've submitted a patch to fix this: https://phabricator.kde.org/D2721
Comment 2 Dmitry Kazakov 2016-09-09 09:49:25 UTC
Git commit ca4941ad1e1066cc96fedb53e06f1058c5a398a0 by Dmitry Kazakov.
Committed on 09/09/2016 at 09:49.
Pushed by dkazakov into branch 'krita-lazybrush-kazakov'.

Fix a crash in New Image dialog

Thanks bruceoutdoors for the patch! :)

M  +0    -14   libs/ui/forms/wdgnewimage.ui
M  +7    -2    libs/ui/widgets/kis_color_button.h

http://commits.kde.org/krita/ca4941ad1e1066cc96fedb53e06f1058c5a398a0
Comment 3 Dmitry Kazakov 2016-09-09 09:51:24 UTC
Git commit d4a7b903b4de0f83f1f0fa76fa5bea9ca97dce89 by Dmitry Kazakov.
Committed on 09/09/2016 at 09:51.
Pushed by dkazakov into branch 'master'.

Fix a crash in New Image dialog

Thanks bruceoutdoors for the patch! :)

M  +0    -14   libs/ui/forms/wdgnewimage.ui
M  +7    -2    libs/ui/widgets/kis_color_button.h

http://commits.kde.org/krita/d4a7b903b4de0f83f1f0fa76fa5bea9ca97dce89