Fix a crash in New Image dialog

Thanks bruceoutdoors for the patch! :)

BUG:368483